...
            mainAxisAlignment: MainAxisAlignment.end,
            children: [
              const Spacer(),

              // 제목
              const Text(
                '옷차림표\n오늘의 옷을 골라요',
                textAlign: TextAlign.center,
                style: TextStyle(
                  fontFamily: 'GangwonEduPower',
                  fontSize: 32,
                  fontWeight: FontWeight.w400,
                  color: Color(0xFF494A4B),
...
                    shape: RoundedRectangleBorder(
                      borderRadius: AppRadius.mediumRadius,
                    ),
                    elevation: 0,
                  ),
                  child: const Text(
                    '시작하기',
                    style: TextStyle(
                      fontFamily: 'GangwonEduAll',
                      fontSize: 16,
                      fontWeight: FontWeight.w700,
                      color: Colors.white,
                    ),
...
