...
                ],
              ),
              const SizedBox(height: AppSpacing.medium),

              // 부제목
              const Text(
                '현재 위치의 기온을 알고\n어울리는 옷차림을 추천합니다.',
                textAlign: TextAlign.center,
                style: TextStyle(
                  fontFamily: 'GangwonEduAll',
                  fontSize: 16,
                  fontWeight: FontWeight.w400,
                  color: Color(0xFF8E8E8E),
...
                    shape: RoundedRectangleBorder(
                      borderRadius: AppRadius.mediumRadius,
                    ),
                    elevation: 0,
                  ),
                  child: const Text(
                    '위치 정보 허용하기',
                    style: TextStyle(
                      fontFamily: 'GangwonEduAll',
                      fontSize: 16,
                      fontWeight: FontWeight.w700,
                      color: Colors.white,
                    ),
...
