...
                      const SizedBox(width: AppSpacing.medium),
                      const Expanded(
                        child: Column(
                          crossAxisAlignment: CrossAxisAlignment.start,
                          children: [
                            Text(
                              '온도로 옷차림 찾기',
                              style: TextStyle(
                                fontFamily: 'GangwonEduPower',
                                fontSize: 20,
                                fontWeight: FontWeight.w400,
                                color: Color(0xFF494A4B),
                              ),
...
